--- a/clusterization.ipynb
+++ b/clusterization.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "CSV_PATH = './dataset/mswc21/csv/TRAIN.csv'\n",
-    "FEATURES_PATH = './dataset/mswc21/features/all_train_embeddings_1024'\n",
+    "FEATURES_PATH = './dataset/mswc21/fbanks'\n",
     "# FEATURES_PATH = './dataset/mswc21/features/all_train_embeddings_1024'"
    ]
   },
@@ -33,7 +33,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "920094f2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -140,7 +142,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "d9600277",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/vkuzia/Desktop/coursework/multilingual_spotting\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
+   "id": "6df60942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.iloc[:len(df)//2, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "fdbfbddb",
    "metadata": {
     "scrolled": false
@@ -150,7 +180,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████| 549858/549858 [03:28<00:00, 2641.97it/s]\n"
+      "100%|█████████████████████████████████| 274929/274929 [01:48<00:00, 2533.54it/s]\n"
      ]
     }
    ],
@@ -162,8 +192,8 @@
     "    vectors = []\n",
     "    for path in tqdm(paths):\n",
     "        matrix = torch.load(os.path.join(FEATURES_PATH, path), map_location=torch.device('cpu'))\n",
-    "        vectors.append(matrix)\n",
-    "#         vectors.append(get_vector(matrix))\n",
+    "#         vectors.append(matrix)\n",
+    "        vectors.append(get_vector(matrix))\n",
     "    return np.stack(vectors)\n",
     "    \n",
     "vectors = get_vectors(df['path'].values)"
@@ -181,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "427b8aec",
    "metadata": {},
    "outputs": [],
@@ -194,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ac048d96",
    "metadata": {},
    "outputs": [
@@ -202,8 +232,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2h 48min 58s, sys: 3h 10min 32s, total: 5h 59min 30s\n",
-      "Wall time: 42min 30s\n"
+      "CPU times: user 3h 16min 57s, sys: 3h 14min 8s, total: 6h 31min 5s\n",
+      "Wall time: 44min 32s\n"
      ]
     },
     {
@@ -212,7 +242,7 @@
        "KMeans(n_clusters=100, random_state=29)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ba81e262",
    "metadata": {},
    "outputs": [],
@@ -247,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1c5bdc38",
    "metadata": {},
    "outputs": [
@@ -255,7 +285,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████████████████████████████████      | 86/100 [01:07<00:10,  1.29it/s]"
+      "100%|█████████████████████████████████████████| 100/100 [00:39<00:00,  2.55it/s]\n"
      ]
     }
    ],
@@ -265,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "da3e94c1",
    "metadata": {},
    "outputs": [],
@@ -280,12 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "70cf0a37",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████| 10/10 [00:00<00:00, 28.86it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "trains = get_trains(df, closest, randoms)"
    ]
@@ -394,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0457f4d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "path = './dataset/mswc21/experiments/kmeans_all_train_1024'\n",
+    "path = './dataset/mswc21/experiments/kmeans_fbanks'\n",
     "os.makedirs(path, exist_ok=True)\n",
     "for i, df_to_save in enumerate(trains):\n",
     "    df_to_save.to_csv(os.path.join(path, f'{i}.csv'))"
@@ -838,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "d36fe9ab",
    "metadata": {},
    "outputs": [],
@@ -849,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "id": "fd56c647",
    "metadata": {},
    "outputs": [],
@@ -859,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 15,
    "id": "91960187",
    "metadata": {},
    "outputs": [
@@ -867,8 +905,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[12.534813    0.49326304]\n",
-      " [-3.6342702  -5.4910727 ]]\n"
+      "[[ 0.05266536 -5.1665306 ]\n",
+      " [-0.6566035  -6.5984917 ]]\n"
      ]
     }
    ],
@@ -878,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 16,
    "id": "5d823e6d",
    "metadata": {
     "scrolled": true
@@ -888,8 +926,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-21.729357, -17.128513, -16.891571, -15.78923, -13.58545, -12.534813, -11.95319, -11.572049, -11.506225, -8.9423485]\n",
-      "[-16.77165, -14.76462, -12.449821, -12.369804, -9.3887205, -9.341587, -9.168316, -9.063241, -6.8312593, -5.4426403]\n"
+      "[-10.413142, -9.369061, -8.26832, -6.907967, -6.7281036, -5.6314874, -5.5367036, -5.3142457, -5.275777, -5.189159]\n",
+      "[-9.03346, -8.270562, -6.363978, -5.9124637, -5.5000024, -5.320664, -5.202361, -5.105609, -4.946178, -4.9123607]\n"
      ]
     }
    ],
@@ -900,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "id": "d8469b55",
    "metadata": {},
    "outputs": [
@@ -908,7 +946,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21.729357\n"
+      "10.413142\n"
      ]
     }
    ],
@@ -926,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 18,
    "id": "820669b3",
    "metadata": {},
    "outputs": [],
